--- a/rpm/libhawaii.yaml
+++ b/rpm/libhawaii.yaml
@@ -67,6 +67,7 @@ SubPackages:
       Group: Development/System
       Requires:
           - libhawaii-devel = %{version}-%{release}
+          - qtconfiguration-devel
       Description: |
         This package contains the files necessary to develop applications |
         that interact with Hawaii Shell.
