Add libhawaii-devel to the libhawaiishell-devel requires

--- a/rpm/libhawaii.yaml
+++ b/rpm/libhawaii.yaml
@@ -67,6 +67,7 @@ SubPackages:
       Group: Development/System
       Requires:
           - libhawaiishell = %{version}-%{release}
+          - libhawaii-devel = %{version}-%{release}
           - qtconfiguration-devel
       Description: |
         This package contains the files necessary to develop applications |
